# red-team-replay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
docs/: PROBLEM.md
site/: index.html
src/: cli.js  index.js
src/red_team_replay/: __init__.py  cli.py
tests/: test_smoke.py
